# Arcade

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  _color_8hpp.html  _color_8hpp.js  _color_8hpp__dep__incl.map  _color_8hpp__dep__incl.md5  _color_8hpp__incl.map  _color_8hpp__incl.md5  _color_8hpp_source.html  _event_8hpp.html  _event_8hpp__incl.map  _event_8hpp__incl.md5  _event_8hpp_source.html  _i_asset_8hpp.html  _i_asset_8hpp__dep__incl.map  _i_asset_8hpp__dep__incl.md5  _i_asset_8hpp_source.html  _i_asset_manager_8hpp.html  _i_asset_manager_8hpp__incl.map  _i_asset_manager_8hpp__incl.md5  _i_asset_manager_8hpp_source.html  _i_display_8hpp.html  _i_display_8hpp.js  _i_display_8hpp__dep__incl.map  _i_display_8hpp__dep__incl.md5  _i_display_8hpp__incl.map  _i_display_8hpp__incl.md5  _i_display_8hpp_source.html  _i_game_8hpp.html  _i_game_8hpp.js  _i_game_8hpp__incl.map  _i_game_8hpp__incl.md5  _i_game_8hpp_source.html  _i_game_object_8hpp.html  (+178 more)
.github/workflows/: ci.yml  documentation.yml  mirroring.yml
doc/: Doxyfile  implementation.dox
doc/examples/: CMakeLists.txt  ExampleDisplay.cpp  ExampleGame.cpp
include/arcade/: Color.hpp  Event.hpp  IAsset.hpp  IAssetManager.hpp  IDisplay.hpp  IGame.hpp  IGameObject.hpp  types.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+44 more)
src/: CMakeLists.txt  placeholder.cpp
src/core/: CMakeLists.txt  Core.cpp  Core.hpp  MainMenu.cpp  MainMenu.hpp  Scoreboard.cpp  Scoreboard.hpp  arcade.cpp  arcade.hpp  core.hpp  main.cpp
src/core/arcade/: core.hpp
src/core/util/: CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.hpp  LibraryInstance.hpp  LibrarySelector.hpp
src/games/: CMakeLists.txt
src/games/centipede/: CMakeLists.txt  entrypoint.cpp
src/games/nibbler/: CMakeLists.txt  Nibbler.cpp  Nibbler.hpp  entrypoint.cpp
src/games/pacman/: CMakeLists.txt  entrypoint.cpp
src/games/qix/: CMakeLists.txt  entrypoint.cpp
src/games/solarfox/: CMakeLists.txt  entrypoint.cpp
src/graphics/: CMakeLists.txt
src/graphics/common/: CMakeLists.txt
src/graphics/common/include/arcade/: IMutableText.hpp  aliases.hpp
src/graphics/common/include/arcade/graphics/: units.hpp
src/graphics/ncurses/: CMakeLists.txt  entrypoint.cpp
src/graphics/sdl2/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Sdl2Display.cpp  Sdl2Display.hpp  entrypoint.cpp  event.cpp  event.hpp
src/graphics/sdl2/asset/: CMakeLists.txt  Font.cpp  Font.hpp  Texture.cpp  Texture.hpp
src/graphics/sdl2/object/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp
src/graphics/sfml/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  SfmlDisplay.cpp  SfmlDisplay.hpp  entrypoint.cpp  event.cpp  event.hpp
src/graphics/sfml/asset/: CMakeLists.txt  Font.cpp  Font.hpp  Texture.cpp  Texture.hpp
src/graphics/sfml/object/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp
src/interface/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  placeholder.cpp
src/interface/.github/workflows/: ci.yml
src/interface/include/arcade/: Color.hpp  Event.hpp  IAsset.hpp  IDisplay.hpp  IGame.hpp  IGameObject.hpp  IRenderer.hpp  interface.hpp  types.hpp
src/interface/src/: CMakeLists.txt
